fixed menu alignment

--- a/testSite/assets/css/custom.css
+++ b/testSite/assets/css/custom.css
@@ -48,7 +48,7 @@
 
 .container-2 {
     display: table;
-    width: 100%;
+    width: 95%;
     word-wrap: break-word;
     padding: 10px;
     margin: 10px;
